Added /users/last_login to swagger
